updated files for Compass and gem upgrades

--- a/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-04-panes/index.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-04-panes/index.html
@@ -809,15 +809,15 @@
     <article role="article" class="layout-slat profile-thumb">
         <div class="layout-slat__media"> 
           <div class="profile-thumb__image--rounded">
-            <a href="#"><img alt="" src="../../images-patternlab/cj-78-78.jpg"></a>
+            <a href="#"><img alt="" src="../../images-patternlab/josh-78-78.jpg"></a>
           </div>
           <div class="profile-thumb__name">
-            <a href="#">C.J. Cregg</a>  
+            <a href="#">Joshua Lyman</a>  
           </div>
         </div>
         <div class="layout-slat__content">
           <div class="profile-thumb__summary">
-            Why, why, oh why do you ask me questions that you absolutely positively know I'm not going to answer?
+             I drink from the keg of glory, Donna. Bring me the finest muffins and bagels in all the land.
           </div>
         </div>
     </article>
@@ -834,15 +834,15 @@
     &lt;article role=&quot;article&quot; class=&quot;layout-slat profile-thumb&quot;&gt;
         &lt;div class=&quot;layout-slat__media&quot;&gt; 
           &lt;div class=&quot;profile-thumb__image--rounded&quot;&gt;
-            &lt;a href=&quot;#&quot;&gt;&lt;img alt=&quot;&quot; src=&quot;../../images-patternlab/cj-78-78.jpg&quot;&gt;&lt;/a&gt;
+            &lt;a href=&quot;#&quot;&gt;&lt;img alt=&quot;&quot; src=&quot;../../images-patternlab/josh-78-78.jpg&quot;&gt;&lt;/a&gt;
           &lt;/div&gt;
           &lt;div class=&quot;profile-thumb__name&quot;&gt;
-            &lt;a href=&quot;#&quot;&gt;C.J. Cregg&lt;/a&gt;  
+            &lt;a href=&quot;#&quot;&gt;Joshua Lyman&lt;/a&gt;  
           &lt;/div&gt;
         &lt;/div&gt;
         &lt;div class=&quot;layout-slat__content&quot;&gt;
           &lt;div class=&quot;profile-thumb__summary&quot;&gt;
-            Why, why, oh why do you ask me questions that you absolutely positively know I'm not going to answer?
+             I drink from the keg of glory, Donna. Bring me the finest muffins and bagels in all the land.
           &lt;/div&gt;
         &lt;/div&gt;
     &lt;/article&gt;
@@ -880,13 +880,13 @@
           <div class="layout-slat layout-slat--small">
             <div class="layout-slat__media">      
               <div class="view__author-image">
-                <img src="../../images-patternlab/sherlock-35-35.jpg">
+                <img src="../../images-patternlab/gordon-35-35.jpg">
               </div>
             </div>
             <div class="layout-slat__content">
-              <div class="view__title"><a href="#">You Can't Take The Sky From Me</a></div>
+              <div class="view__title"><a href="#">Help, help, I'm being repressed!</a></div>
               <div class="view__meta">
-                Posted by <strong>Sherlock Holmes</strong> | January 1 at 6:20am
+                Posted by <strong>Gordon Clark</strong> | October 25 at 3:51am
               </div>
             </div>
           </div>
@@ -939,13 +939,13 @@
           &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
             &lt;div class=&quot;layout-slat__media&quot;&gt;      
               &lt;div class=&quot;view__author-image&quot;&gt;
-                &lt;img src=&quot;../../images-patternlab/sherlock-35-35.jpg&quot;&gt;
+                &lt;img src=&quot;../../images-patternlab/gordon-35-35.jpg&quot;&gt;
               &lt;/div&gt;
             &lt;/div&gt;
             &lt;div class=&quot;layout-slat__content&quot;&gt;
-              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;You Can't Take The Sky From Me&lt;/a&gt;&lt;/div&gt;
+              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Help, help, I'm being repressed!&lt;/a&gt;&lt;/div&gt;
               &lt;div class=&quot;view__meta&quot;&gt;
-                Posted by &lt;strong&gt;Sherlock Holmes&lt;/strong&gt; | January 1 at 6:20am
+                Posted by &lt;strong&gt;Gordon Clark&lt;/strong&gt; | October 25 at 3:51am
               &lt;/div&gt;
             &lt;/div&gt;
           &lt;/div&gt;
