--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-innovation-detail/03-templates-innovation-detail.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-innovation-detail/03-templates-innovation-detail.html
@@ -603,15 +603,15 @@
             <article role="article" class="layout-slat profile-thumb">
                 <div class="layout-slat__media"> 
                   <div class="profile-thumb__image--rounded">
-                    <a href="#"><img alt="" src="../../images-patternlab/cj-78-78.jpg"></a>
+                    <a href="#"><img alt="" src="../../images-patternlab/josh-78-78.jpg"></a>
                   </div>
                   <div class="profile-thumb__name">
-                    <a href="#">C.J. Cregg</a>  
+                    <a href="#">Joshua Lyman</a>  
                   </div>
                 </div>
                 <div class="layout-slat__content">
                   <div class="profile-thumb__summary">
-                    Why, why, oh why do you ask me questions that you absolutely positively know I'm not going to answer?
+                     I drink from the keg of glory, Donna. Bring me the finest muffins and bagels in all the land.
                   </div>
                 </div>
             </article>
