--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-community-detail/02-organisms-01-content-types-community-detail.escaped.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-community-detail/02-organisms-01-content-types-community-detail.escaped.html
@@ -40,40 +40,12 @@
                 &lt;article class=&quot;card card--background&quot;&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
                     &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
-                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://hipsteripsum.me/&quot;&gt;Whatever swag accusamus occupy, gentrify butcher tote bag&lt;/a&gt;&lt;/h3&gt;
+                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://www.niemanlab.org/journo-ipsum/&quot;&gt;Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM&lt;/a&gt;&lt;/h3&gt;
                     &lt;div class=&quot;card__author&quot;&gt;
                       &lt;div class=&quot;card__author-inner&quot;&gt;
-                        &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/scully-35-35.jpg&quot;&gt;&lt;/div&gt;
-                        &lt;div class=&quot;card__author-name&quot;&gt;Dana Scully&lt;/div&gt;
-                        &lt;div class=&quot;card__author-date&quot;&gt;4/13/2015&lt;/div&gt;    
-                      &lt;/div&gt;
-                    &lt;/div&gt;
-                  &lt;/div&gt;
-                &lt;/article&gt;              &lt;/div&gt;
-              &lt;div class=&quot;views-row&quot;&gt;
-                &lt;article class=&quot;card card--background&quot;&gt;
-                  &lt;div class=&quot;card__content&quot;&gt;
-                    &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
-                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://www.malevole.com/mv/misc/text/&quot;&gt;Thunder, thunder, thundercats, Ho!&lt;/a&gt;&lt;/h3&gt;
-                    &lt;div class=&quot;card__author&quot;&gt;
-                      &lt;div class=&quot;card__author-inner&quot;&gt;
-                        &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/tyrion-35-35.jpg&quot;&gt;&lt;/div&gt;
-                        &lt;div class=&quot;card__author-name&quot;&gt;Tyrion Lannister&lt;/div&gt;
-                        &lt;div class=&quot;card__author-date&quot;&gt;6/08/2015&lt;/div&gt;    
-                      &lt;/div&gt;
-                    &lt;/div&gt;
-                  &lt;/div&gt;
-                &lt;/article&gt;              &lt;/div&gt;
-              &lt;div class=&quot;views-row&quot;&gt;
-                &lt;article class=&quot;card card--background&quot;&gt;
-                  &lt;div class=&quot;card__content&quot;&gt;
-                    &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
-                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://cupcakeipsum.com/&quot;&gt;Danish danish candy canes bonbon cheesecake danish marzipan&lt;/a&gt;&lt;/h3&gt;
-                    &lt;div class=&quot;card__author&quot;&gt;
-                      &lt;div class=&quot;card__author-inner&quot;&gt;
-                        &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/inigo-35-35.jpg&quot;&gt;&lt;/div&gt;
-                        &lt;div class=&quot;card__author-name&quot;&gt;Inigo Montoya&lt;/div&gt;
-                        &lt;div class=&quot;card__author-date&quot;&gt;11/19/2015&lt;/div&gt;    
+                        &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/daenerys-35-35.jpg&quot;&gt;&lt;/div&gt;
+                        &lt;div class=&quot;card__author-name&quot;&gt;Daenerys Targaryen&lt;/div&gt;
+                        &lt;div class=&quot;card__author-date&quot;&gt;5/26/2015&lt;/div&gt;    
                       &lt;/div&gt;
                     &lt;/div&gt;
                   &lt;/div&gt;
@@ -88,6 +60,34 @@
                         &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/buttercup-35-35.jpg&quot;&gt;&lt;/div&gt;
                         &lt;div class=&quot;card__author-name&quot;&gt;Princess Buttercup&lt;/div&gt;
                         &lt;div class=&quot;card__author-date&quot;&gt;12/28/2015&lt;/div&gt;    
+                      &lt;/div&gt;
+                    &lt;/div&gt;
+                  &lt;/div&gt;
+                &lt;/article&gt;              &lt;/div&gt;
+              &lt;div class=&quot;views-row&quot;&gt;
+                &lt;article class=&quot;card card--background&quot;&gt;
+                  &lt;div class=&quot;card__content&quot;&gt;
+                    &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
+                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;Help, help, I'm being repressed!&lt;/a&gt;&lt;/h3&gt;
+                    &lt;div class=&quot;card__author&quot;&gt;
+                      &lt;div class=&quot;card__author-inner&quot;&gt;
+                        &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/gordon-35-35.jpg&quot;&gt;&lt;/div&gt;
+                        &lt;div class=&quot;card__author-name&quot;&gt;Gordon Clark&lt;/div&gt;
+                        &lt;div class=&quot;card__author-date&quot;&gt;10/25/2015&lt;/div&gt;    
+                      &lt;/div&gt;
+                    &lt;/div&gt;
+                  &lt;/div&gt;
+                &lt;/article&gt;              &lt;/div&gt;
+              &lt;div class=&quot;views-row&quot;&gt;
+                &lt;article class=&quot;card card--background&quot;&gt;
+                  &lt;div class=&quot;card__content&quot;&gt;
+                    &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
+                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://cupcakeipsum.com/&quot;&gt;Danish danish candy canes bonbon cheesecake danish marzipan&lt;/a&gt;&lt;/h3&gt;
+                    &lt;div class=&quot;card__author&quot;&gt;
+                      &lt;div class=&quot;card__author-inner&quot;&gt;
+                        &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/inigo-35-35.jpg&quot;&gt;&lt;/div&gt;
+                        &lt;div class=&quot;card__author-name&quot;&gt;Inigo Montoya&lt;/div&gt;
+                        &lt;div class=&quot;card__author-date&quot;&gt;11/19/2015&lt;/div&gt;    
                       &lt;/div&gt;
                     &lt;/div&gt;
                   &lt;/div&gt;
@@ -132,27 +132,27 @@
               &lt;div class=&quot;views-row&quot;&gt;
                 &lt;article class=&quot;card card--icons&quot;&gt;
                   &lt;div class=&quot;card__image&quot;&gt;
-                    &lt;a href=&quot;http://http://www.commercekitchen.com/whedon-ipsum/&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/animals/3/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
+                    &lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/cats/3/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
 &lt;/a&gt;
                   &lt;/div&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
-                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://http://www.commercekitchen.com/whedon-ipsum/&quot;&gt;You Can't Take The Sky From Me&lt;/a&gt;&lt;/h3&gt;
-                    &lt;div&gt;&lt;p&gt; We're gonna explode? I don't wanna explode. Boy, when they were handing out school spirit, you didn't even stand in line, did you? We will rule over all this land, and we will call it...This Land. It's about power and it's about women and you just hate those two words in the same sentence, don't you? Just once I would like to run into a cult of bunny worshippers. Put your words in word places please. &lt;/p&gt;&lt;/div&gt;
+                    &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;Help, help, I'm being repressed!&lt;/a&gt;&lt;/h3&gt;
+                    &lt;div&gt;&lt;p&gt;The Knights Who Say Ni demand a sacrifice! &hellip;Are you suggesting that coconuts migrate? Knights of Ni, we are but simple travelers who seek the enchanter who lives beyond these woods. You don't frighten us, English pig-dogs! Go and boil your bottoms, sons of a silly person! I blow my nose at you, so-called Ah-thoor Keeng, you and all your silly English K-n-n-n-n-n-n-n-niggits!&lt;/p&gt;&lt;/div&gt;
                     &lt;div class=&quot;card__counts&quot;&gt;
                       &lt;div class=&quot;view&quot;&gt;
-                        &lt;div class=&quot;has-icon--evidence&quot; title=&quot;Evidence&quot;&gt;2&lt;/div&gt;
+                        &lt;div class=&quot;has-icon--evidence&quot; title=&quot;Evidence&quot;&gt;295&lt;/div&gt;
                       &lt;/div&gt;
                       &lt;div class=&quot;view&quot;&gt;
-                        &lt;div class=&quot;has-icon--comment&quot; title=&quot;Comments&quot;&gt;1&lt;/div&gt;
+                        &lt;div class=&quot;has-icon--comment&quot; title=&quot;Comments&quot;&gt;1034&lt;/div&gt;
                       &lt;/div&gt;
                       &lt;div class=&quot;view&quot;&gt;
-                        &lt;div class=&quot;has-icon--funding&quot; title=&quot;Funding&quot;&gt;4500&lt;/div&gt;
+                        &lt;div class=&quot;has-icon--funding&quot; title=&quot;Funding&quot;&gt;450&lt;/div&gt;
                       &lt;/div&gt;
                       &lt;div class=&quot;view&quot;&gt;
-                        &lt;div class=&quot;has-icon--favorite&quot; title=&quot;Favorites&quot;&gt;10&lt;/div&gt;
+                        &lt;div class=&quot;has-icon--favorite&quot; title=&quot;Favorites&quot;&gt;230&lt;/div&gt;
                       &lt;/div&gt;
                       &lt;div class=&quot;view&quot;&gt;
-                        &lt;div class=&quot;has-icon--assistance&quot; title=&quot;Assistance&quot;&gt;4&lt;/div&gt;
+                        &lt;div class=&quot;has-icon--assistance&quot; title=&quot;Assistance&quot;&gt;487&lt;/div&gt;
                       &lt;/div&gt;
                     &lt;/div&gt;
                   &lt;/div&gt;
@@ -233,11 +233,11 @@
                 &lt;article class=&quot;card card--icons&quot;&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
                     &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
-                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://http://www.commercekitchen.com/whedon-ipsum/&quot;&gt;You Can't Take The Sky From Me&lt;/a&gt;&lt;/h3&gt;
+                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;Help, help, I'm being repressed!&lt;/a&gt;&lt;/h3&gt;
                     &lt;div class=&quot;card__author&quot;&gt;
-                      &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/sherlock-35-35.jpg&quot;&gt;&lt;/div&gt;
-                      &lt;div class=&quot;card__author-name&quot;&gt;Sherlock Holmes&lt;/div&gt;
-                      &lt;div class=&quot;card__author-date&quot;&gt;1/01/2015&lt;/div&gt;    
+                      &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/gordon-35-35.jpg&quot;&gt;&lt;/div&gt;
+                      &lt;div class=&quot;card__author-name&quot;&gt;Gordon Clark&lt;/div&gt;
+                      &lt;div class=&quot;card__author-date&quot;&gt;10/25/2015&lt;/div&gt;    
                     &lt;/div&gt;
                     &lt;div class=&quot;card__list&quot;&gt;
                       &lt;span class=&quot;card__list-label&quot;&gt;Sectors:&lt;/span&gt; 
@@ -245,10 +245,10 @@
                     &lt;/div&gt;
                     &lt;div class=&quot;card__counts&quot;&gt;
                       &lt;div class=&quot;view&quot;&gt;
-                        &lt;div class=&quot;has-icon--comment&quot; title=&quot;Comments&quot;&gt;1&lt;/div&gt;
+                        &lt;div class=&quot;has-icon--comment&quot; title=&quot;Comments&quot;&gt;1034&lt;/div&gt;
                       &lt;/div&gt;
                       &lt;div class=&quot;view&quot;&gt;
-                        &lt;div class=&quot;has-icon--favorite&quot; title=&quot;Favorites&quot;&gt;10&lt;/div&gt;
+                        &lt;div class=&quot;has-icon--favorite&quot; title=&quot;Favorites&quot;&gt;230&lt;/div&gt;
                       &lt;/div&gt;
                     &lt;/div&gt;
                   &lt;/div&gt;
@@ -344,15 +344,15 @@
               &lt;/div&gt;
               &lt;div class=&quot;views-row&quot;&gt;
                 &lt;article class=&quot;card card--icons&quot;&gt;
-                  &lt;div class=&quot;card__number&quot;&gt;30,000,000&lt;/div&gt;
+                  &lt;div class=&quot;card__number&quot;&gt;120,000,000&lt;/div&gt;
                   &lt;div class=&quot;card__image&quot;&gt;
-                    &lt;a href=&quot;http://http://www.commercekitchen.com/whedon-ipsum/&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/animals/3/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
+                    &lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/cats/3/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
 &lt;/a&gt;
                   &lt;/div&gt;
                   &lt;div class=&quot;card__content&quot;&gt;
-                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://http://www.commercekitchen.com/whedon-ipsum/&quot;&gt;You Can't Take The Sky From Me&lt;/a&gt;&lt;/h3&gt;
+                    &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;Help, help, I'm being repressed!&lt;/a&gt;&lt;/h3&gt;
                     &lt;div class=&quot;card__list&quot;&gt;
-                      &lt;div class=&quot;card__list-label&quot;&gt;Due by:&lt;/div&gt; 1/01/2015
+                      &lt;div class=&quot;card__list-label&quot;&gt;Due by:&lt;/div&gt; 10/25/2015
                     &lt;/div&gt; 
                     &lt;div class=&quot;card__list&quot;&gt;
                       &lt;div class=&quot;card__list-label&quot;&gt;Eligibility:&lt;/div&gt; &lt;span class=&quot;has-icon-member&quot; title=&quot;Member&quot;&gt;Member&lt;/span&gt; &lt;span class=&quot;has-icon-community&quot; title=&quot;Organization&quot;&gt;Organization&lt;/span&gt;
@@ -367,10 +367,10 @@
                     &lt;/div&gt;
                     &lt;div class=&quot;card__counts&quot;&gt;
                       &lt;div class=&quot;view&quot;&gt;
-                        &lt;div class=&quot;has-icon--comment&quot; title=&quot;Comments&quot;&gt;1&lt;/div&gt;
+                        &lt;div class=&quot;has-icon--comment&quot; title=&quot;Comments&quot;&gt;1034&lt;/div&gt;
                       &lt;/div&gt;
                       &lt;div class=&quot;view&quot;&gt;
-                        &lt;div class=&quot;has-icon--favorite&quot; title=&quot;Favorites&quot;&gt;10&lt;/div&gt;
+                        &lt;div class=&quot;has-icon--favorite&quot; title=&quot;Favorites&quot;&gt;230&lt;/div&gt;
                       &lt;/div&gt;
                     &lt;/div&gt;
                   &lt;/div&gt;
@@ -476,13 +476,13 @@
                  &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
                    &lt;div class=&quot;layout-slat__media&quot;&gt;      
                      &lt;div class=&quot;view__author-image&quot;&gt;
-                       &lt;img src=&quot;../../images-patternlab/sherlock-35-35.jpg&quot;&gt;
+                       &lt;img src=&quot;../../images-patternlab/gordon-35-35.jpg&quot;&gt;
                      &lt;/div&gt;
                    &lt;/div&gt;
                    &lt;div class=&quot;layout-slat__content&quot;&gt;
-                     &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;You Can't Take The Sky From Me&lt;/a&gt;&lt;/div&gt;
+                     &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Help, help, I'm being repressed!&lt;/a&gt;&lt;/div&gt;
                      &lt;div class=&quot;view__meta&quot;&gt;
-                       Posted by &lt;strong&gt;Sherlock Holmes&lt;/strong&gt; | January 1 at 6:20am
+                       Posted by &lt;strong&gt;Gordon Clark&lt;/strong&gt; | October 25 at 3:51am
                      &lt;/div&gt;
                    &lt;/div&gt;
                  &lt;/div&gt;
