--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-card-types/03-templates-card-types.escaped.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-card-types/03-templates-card-types.escaped.html
@@ -539,15 +539,15 @@
                     &lt;/div&gt;
                     &lt;div class=&quot;views-row&quot;&gt;
                       &lt;article class=&quot;card card--icons&quot;&gt;
-                        &lt;div class=&quot;card__number&quot;&gt;30,000,000&lt;/div&gt;
+                        &lt;div class=&quot;card__number&quot;&gt;120,000,000&lt;/div&gt;
                         &lt;div class=&quot;card__image&quot;&gt;
-                          &lt;a href=&quot;http://http://www.commercekitchen.com/whedon-ipsum/&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/animals/3/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
+                          &lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/cats/3/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
 &lt;/a&gt;
                         &lt;/div&gt;
                         &lt;div class=&quot;card__content&quot;&gt;
-                          &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://http://www.commercekitchen.com/whedon-ipsum/&quot;&gt;You Can't Take The Sky From Me&lt;/a&gt;&lt;/h3&gt;
+                          &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;Help, help, I'm being repressed!&lt;/a&gt;&lt;/h3&gt;
                           &lt;div class=&quot;card__list&quot;&gt;
-                            &lt;div class=&quot;card__list-label&quot;&gt;Due by:&lt;/div&gt; 1/01/2015
+                            &lt;div class=&quot;card__list-label&quot;&gt;Due by:&lt;/div&gt; 10/25/2015
                           &lt;/div&gt; 
                           &lt;div class=&quot;card__list&quot;&gt;
                             &lt;div class=&quot;card__list-label&quot;&gt;Eligibility:&lt;/div&gt; &lt;span class=&quot;has-icon-member&quot; title=&quot;Member&quot;&gt;Member&lt;/span&gt; &lt;span class=&quot;has-icon-community&quot; title=&quot;Organization&quot;&gt;Organization&lt;/span&gt;
@@ -562,10 +562,10 @@
                           &lt;/div&gt;
                           &lt;div class=&quot;card__counts&quot;&gt;
                             &lt;div class=&quot;view&quot;&gt;
-                              &lt;div class=&quot;has-icon--comment&quot; title=&quot;Comments&quot;&gt;1&lt;/div&gt;
+                              &lt;div class=&quot;has-icon--comment&quot; title=&quot;Comments&quot;&gt;1034&lt;/div&gt;
                             &lt;/div&gt;
                             &lt;div class=&quot;view&quot;&gt;
-                              &lt;div class=&quot;has-icon--favorite&quot; title=&quot;Favorites&quot;&gt;10&lt;/div&gt;
+                              &lt;div class=&quot;has-icon--favorite&quot; title=&quot;Favorites&quot;&gt;230&lt;/div&gt;
                             &lt;/div&gt;
                           &lt;/div&gt;
                         &lt;/div&gt;
@@ -640,12 +640,12 @@
                     &lt;div class=&quot;views-row&quot;&gt;
                       &lt;article class=&quot;card card--center&quot;&gt;
                         &lt;div class=&quot;card__image&quot;&gt;
-                          &lt;a href=&quot;#&quot;&gt;&lt;img src=&quot;../../images-patternlab/sherlock-500-300.jpg&quot; alt=&quot;Card 5:3&quot;&gt;&lt;/a&gt;
+                          &lt;a href=&quot;#&quot;&gt;&lt;img src=&quot;../../images-patternlab/gordon-500-300.jpg&quot; alt=&quot;Card 5:3&quot;&gt;&lt;/a&gt;
                         &lt;/div&gt;
                         &lt;div class=&quot;card__content&quot;&gt;
-                          &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Sherlock Holmes&lt;/a&gt;&lt;/h3&gt;
-                          &lt;div class=&quot;card__user-title&quot;&gt;Consulting Detective&lt;/div&gt;
-                          &lt;div class=&quot;card__user-organization&quot;&gt;Scotland Yard&lt;/div&gt;
+                          &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Gordon Clark&lt;/a&gt;&lt;/h3&gt;
+                          &lt;div class=&quot;card__user-title&quot;&gt;Lead Engineer&lt;/div&gt;
+                          &lt;div class=&quot;card__user-organization&quot;&gt;Cardiff Electric&lt;/div&gt;
                         &lt;/div&gt;
                       &lt;/article&gt;
                     &lt;/div&gt;
@@ -694,20 +694,20 @@
                     &lt;div class=&quot;views-row&quot;&gt;
                       &lt;article class=&quot;card card--icons card--center&quot;&gt;
                         &lt;div class=&quot;card__image&quot;&gt;
-                          &lt;a href=&quot;http://http://www.commercekitchen.com/whedon-ipsum/&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/animals/3/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
+                          &lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/cats/3/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
 &lt;/a&gt;
                         &lt;/div&gt;
                         &lt;div class=&quot;card__content&quot;&gt;
                           &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Latin America / Caribbean&lt;/a&gt;&lt;/h3&gt;
                           &lt;div class=&quot;card__counts&quot;&gt;
                             &lt;div class=&quot;view&quot;&gt;
-                              &lt;div class=&quot;has-icon--funding&quot; title=&quot;Funding&quot;&gt;4500&lt;/div&gt;
+                              &lt;div class=&quot;has-icon--funding&quot; title=&quot;Funding&quot;&gt;450&lt;/div&gt;
                             &lt;/div&gt;
                             &lt;div class=&quot;view&quot;&gt;
-                              &lt;div class=&quot;has-icon--innovation&quot; title=&quot;Innovations&quot;&gt;2&lt;/div&gt;
+                              &lt;div class=&quot;has-icon--innovation&quot; title=&quot;Innovations&quot;&gt;4&lt;/div&gt;
                             &lt;/div&gt;
                             &lt;div class=&quot;view&quot;&gt;
-                              &lt;div class=&quot;has-icon--resource&quot; title=&quot;Resources&quot;&gt;32&lt;/div&gt;
+                              &lt;div class=&quot;has-icon--resource&quot; title=&quot;Resources&quot;&gt;12&lt;/div&gt;
                             &lt;/div&gt;
                           &lt;/div&gt;
                         &lt;/div&gt;
@@ -766,13 +766,13 @@
                       &lt;/article&gt;                    &lt;/div&gt;
                     &lt;div class=&quot;views-row&quot;&gt;
                       &lt;article class=&quot;card&quot;&gt;
-                        &lt;h2 class=&quot;card__date&quot;&gt;January 1&lt;/h2&gt;
+                        &lt;h2 class=&quot;card__date&quot;&gt;October 25&lt;/h2&gt;
                         &lt;div class=&quot;card__image&quot;&gt;
-                          &lt;a href=&quot;http://http://www.commercekitchen.com/whedon-ipsum/&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/animals/3/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
+                          &lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/cats/3/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
 &lt;/a&gt;
                         &lt;/div&gt;
                         &lt;div class=&quot;card__content&quot;&gt;
-                          &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://http://www.commercekitchen.com/whedon-ipsum/&quot;&gt;You Can't Take The Sky From Me&lt;/a&gt;&lt;/h3&gt;
+                          &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;Help, help, I'm being repressed!&lt;/a&gt;&lt;/h3&gt;
                           &lt;div class=&quot;card__meta&quot;&gt;
                             &lt;div class=&quot;card__list--split&quot;&gt;
                               &lt;span class=&quot;card__list-label&quot;&gt;Location:&lt;/span&gt; 
@@ -846,27 +846,27 @@
                     &lt;div class=&quot;views-row&quot;&gt;
                       &lt;article class=&quot;card card--icons&quot;&gt;
                         &lt;div class=&quot;card__image&quot;&gt;
-                          &lt;a href=&quot;http://http://www.commercekitchen.com/whedon-ipsum/&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/animals/3/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
+                          &lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/cats/3/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
 &lt;/a&gt;
                         &lt;/div&gt;
                         &lt;div class=&quot;card__content&quot;&gt;
-                          &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://http://www.commercekitchen.com/whedon-ipsum/&quot;&gt;You Can't Take The Sky From Me&lt;/a&gt;&lt;/h3&gt;
-                          &lt;div&gt;&lt;p&gt; We're gonna explode? I don't wanna explode. Boy, when they were handing out school spirit, you didn't even stand in line, did you? We will rule over all this land, and we will call it...This Land. It's about power and it's about women and you just hate those two words in the same sentence, don't you? Just once I would like to run into a cult of bunny worshippers. Put your words in word places please. &lt;/p&gt;&lt;/div&gt;
+                          &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;Help, help, I'm being repressed!&lt;/a&gt;&lt;/h3&gt;
+                          &lt;div&gt;&lt;p&gt;The Knights Who Say Ni demand a sacrifice! &hellip;Are you suggesting that coconuts migrate? Knights of Ni, we are but simple travelers who seek the enchanter who lives beyond these woods. You don't frighten us, English pig-dogs! Go and boil your bottoms, sons of a silly person! I blow my nose at you, so-called Ah-thoor Keeng, you and all your silly English K-n-n-n-n-n-n-n-niggits!&lt;/p&gt;&lt;/div&gt;
                           &lt;div class=&quot;card__counts&quot;&gt;
                             &lt;div class=&quot;view&quot;&gt;
-                              &lt;div class=&quot;has-icon--evidence&quot; title=&quot;Evidence&quot;&gt;2&lt;/div&gt;
+                              &lt;div class=&quot;has-icon--evidence&quot; title=&quot;Evidence&quot;&gt;295&lt;/div&gt;
                             &lt;/div&gt;
                             &lt;div class=&quot;view&quot;&gt;
-                              &lt;div class=&quot;has-icon--comment&quot; title=&quot;Comments&quot;&gt;1&lt;/div&gt;
+                              &lt;div class=&quot;has-icon--comment&quot; title=&quot;Comments&quot;&gt;1034&lt;/div&gt;
                             &lt;/div&gt;
                             &lt;div class=&quot;view&quot;&gt;
-                              &lt;div class=&quot;has-icon--funding&quot; title=&quot;Funding&quot;&gt;4500&lt;/div&gt;
+                              &lt;div class=&quot;has-icon--funding&quot; title=&quot;Funding&quot;&gt;450&lt;/div&gt;
                             &lt;/div&gt;
                             &lt;div class=&quot;view&quot;&gt;
-                              &lt;div class=&quot;has-icon--favorite&quot; title=&quot;Favorites&quot;&gt;10&lt;/div&gt;
+                              &lt;div class=&quot;has-icon--favorite&quot; title=&quot;Favorites&quot;&gt;230&lt;/div&gt;
                             &lt;/div&gt;
                             &lt;div class=&quot;view&quot;&gt;
-                              &lt;div class=&quot;has-icon--assistance&quot; title=&quot;Assistance&quot;&gt;4&lt;/div&gt;
+                              &lt;div class=&quot;has-icon--assistance&quot; title=&quot;Assistance&quot;&gt;487&lt;/div&gt;
                             &lt;/div&gt;
                           &lt;/div&gt;
                         &lt;/div&gt;
@@ -927,12 +927,12 @@
                       &lt;article class=&quot;card card--background&quot;&gt;
                         &lt;div class=&quot;card__content&quot;&gt;
                           &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
-                          &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://http://www.commercekitchen.com/whedon-ipsum/&quot;&gt;You Can't Take The Sky From Me&lt;/a&gt;&lt;/h3&gt;
+                          &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;Help, help, I'm being repressed!&lt;/a&gt;&lt;/h3&gt;
                           &lt;div class=&quot;card__author&quot;&gt;
                             &lt;div class=&quot;card__author-inner&quot;&gt;
-                              &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/sherlock-35-35.jpg&quot;&gt;&lt;/div&gt;
-                              &lt;div class=&quot;card__author-name&quot;&gt;Sherlock Holmes&lt;/div&gt;
-                              &lt;div class=&quot;card__author-date&quot;&gt;1/01/2015&lt;/div&gt;    
+                              &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/gordon-35-35.jpg&quot;&gt;&lt;/div&gt;
+                              &lt;div class=&quot;card__author-name&quot;&gt;Gordon Clark&lt;/div&gt;
+                              &lt;div class=&quot;card__author-date&quot;&gt;10/25/2015&lt;/div&gt;    
                             &lt;/div&gt;
                           &lt;/div&gt;
                         &lt;/div&gt;
@@ -994,11 +994,11 @@
                       &lt;article class=&quot;card card--icons&quot;&gt;
                         &lt;div class=&quot;card__content&quot;&gt;
                           &lt;h2 class=&quot;card__type&quot;&gt;Toolkit&lt;/h2&gt;
-                          &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://http://www.commercekitchen.com/whedon-ipsum/&quot;&gt;You Can't Take The Sky From Me&lt;/a&gt;&lt;/h3&gt;
+                          &lt;h3 class=&quot;card__primary-title&quot;&gt;&lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;Help, help, I'm being repressed!&lt;/a&gt;&lt;/h3&gt;
                           &lt;div class=&quot;card__author&quot;&gt;
-                            &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/sherlock-35-35.jpg&quot;&gt;&lt;/div&gt;
-                            &lt;div class=&quot;card__author-name&quot;&gt;Sherlock Holmes&lt;/div&gt;
-                            &lt;div class=&quot;card__author-date&quot;&gt;1/01/2015&lt;/div&gt;    
+                            &lt;div class=&quot;card__author-image&quot;&gt;&lt;img src=&quot;../../images-patternlab/gordon-35-35.jpg&quot;&gt;&lt;/div&gt;
+                            &lt;div class=&quot;card__author-name&quot;&gt;Gordon Clark&lt;/div&gt;
+                            &lt;div class=&quot;card__author-date&quot;&gt;10/25/2015&lt;/div&gt;    
                           &lt;/div&gt;
                           &lt;div class=&quot;card__list&quot;&gt;
                             &lt;span class=&quot;card__list-label&quot;&gt;Sectors:&lt;/span&gt; 
@@ -1006,10 +1006,10 @@
                           &lt;/div&gt;
                           &lt;div class=&quot;card__counts&quot;&gt;
                             &lt;div class=&quot;view&quot;&gt;
-                              &lt;div class=&quot;has-icon--comment&quot; title=&quot;Comments&quot;&gt;1&lt;/div&gt;
+                              &lt;div class=&quot;has-icon--comment&quot; title=&quot;Comments&quot;&gt;1034&lt;/div&gt;
                             &lt;/div&gt;
                             &lt;div class=&quot;view&quot;&gt;
-                              &lt;div class=&quot;has-icon--favorite&quot; title=&quot;Favorites&quot;&gt;10&lt;/div&gt;
+                              &lt;div class=&quot;has-icon--favorite&quot; title=&quot;Favorites&quot;&gt;230&lt;/div&gt;
                             &lt;/div&gt;
                           &lt;/div&gt;
                         &lt;/div&gt;
@@ -1086,21 +1086,21 @@
                     &lt;div class=&quot;views-row&quot;&gt;
                       &lt;article class=&quot;card card--icons&quot;&gt;
                         &lt;div class=&quot;card__image&quot;&gt;
-                          &lt;a href=&quot;http://http://www.commercekitchen.com/whedon-ipsum/&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/animals/3/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
+                          &lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;&lt;img src=&quot;http://lorempixel.com/500/300/cats/3/&quot; alt=&quot;Card 5:3&quot; height=&quot;300&quot; width=&quot;500&quot;&gt;
 &lt;/a&gt;
                         &lt;/div&gt;
                         &lt;div class=&quot;card__content&quot;&gt;
-                          &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://http://www.commercekitchen.com/whedon-ipsum/&quot;&gt;You Can't Take The Sky From Me&lt;/a&gt;&lt;/h3&gt;
-                          &lt;div&gt;&lt;p&gt; We're gonna explode? I don't wanna explode. Boy, when they were handing out school spirit, you didn't even stand in line, did you? We will rule over all this land, and we will call it...This Land. It's about power and it's about women and you just hate those two words in the same sentence, don't you? Just once I would like to run into a cult of bunny worshippers. Put your words in word places please. &lt;/p&gt;&lt;/div&gt;
+                          &lt;h3 class=&quot;card__title&quot;&gt;&lt;a href=&quot;http://chrisvalleskey.com/fillerama/&quot;&gt;Help, help, I'm being repressed!&lt;/a&gt;&lt;/h3&gt;
+                          &lt;div&gt;&lt;p&gt;The Knights Who Say Ni demand a sacrifice! &hellip;Are you suggesting that coconuts migrate? Knights of Ni, we are but simple travelers who seek the enchanter who lives beyond these woods. You don't frighten us, English pig-dogs! Go and boil your bottoms, sons of a silly person! I blow my nose at you, so-called Ah-thoor Keeng, you and all your silly English K-n-n-n-n-n-n-n-niggits!&lt;/p&gt;&lt;/div&gt;
                           &lt;div class=&quot;card__counts&quot;&gt;
                             &lt;div class=&quot;view&quot;&gt;
-                              &lt;div class=&quot;has-icon--innovation&quot; title=&quot;Innovations&quot;&gt;2&lt;/div&gt;
+                              &lt;div class=&quot;has-icon--innovation&quot; title=&quot;Innovations&quot;&gt;4&lt;/div&gt;
                             &lt;/div&gt;
                             &lt;div class=&quot;view&quot;&gt;
-                              &lt;div class=&quot;has-icon--member&quot; title=&quot;Members&quot;&gt;10&lt;/div&gt;
+                              &lt;div class=&quot;has-icon--member&quot; title=&quot;Members&quot;&gt;4578&lt;/div&gt;
                             &lt;/div&gt;
                             &lt;div class=&quot;view&quot;&gt;
-                              &lt;div class=&quot;has-icon--favorite&quot; title=&quot;Favorites&quot;&gt;10&lt;/div&gt;
+                              &lt;div class=&quot;has-icon--favorite&quot; title=&quot;Favorites&quot;&gt;230&lt;/div&gt;
                             &lt;/div&gt;
                           &lt;/div&gt;
                         &lt;/div&gt;
