--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-user/03-templates-user.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-user/03-templates-user.html
@@ -713,13 +713,13 @@
                 <div class="layout-slat layout-slat--small">
                   <div class="layout-slat__media">      
                     <div class="view__author-image">
-                      <img src="../../images-patternlab/sherlock-35-35.jpg">
+                      <img src="../../images-patternlab/gordon-35-35.jpg">
                     </div>
                   </div>
                   <div class="layout-slat__content">
-                    <div class="view__title"><a href="#">You Can't Take The Sky From Me</a></div>
+                    <div class="view__title"><a href="#">Help, help, I'm being repressed!</a></div>
                     <div class="view__meta">
-                      Posted by <strong>Sherlock Holmes</strong> | January 1 at 6:20am
+                      Posted by <strong>Gordon Clark</strong> | October 25 at 3:51am
                     </div>
                   </div>
                 </div>
