--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-community-detail/02-organisms-01-content-types-community-detail.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-community-detail/02-organisms-01-content-types-community-detail.html
@@ -96,12 +96,12 @@
                 <article class="card card--background">
                   <div class="card__content">
                     <h2 class="card__type">Toolkit</h2>
-                    <h3 class="card__title"><a href="http://www.niemanlab.org/journo-ipsum/">Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM</a></h3>
+                    <h3 class="card__title"><a href="http://chrisvalleskey.com/fillerama/">Rebel Mission to Ord Mantell</a></h3>
                     <div class="card__author">
                       <div class="card__author-inner">
-                        <div class="card__author-image"><img src="../../images-patternlab/daenerys-35-35.jpg"></div>
-                        <div class="card__author-name">Daenerys Targaryen</div>
-                        <div class="card__author-date">5/26/2015</div>    
+                        <div class="card__author-image"><img src="../../images-patternlab/cameron-35-35.jpg"></div>
+                        <div class="card__author-name">Cameron Howe</div>
+                        <div class="card__author-date">9/04/2015</div>    
                       </div>
                     </div>
                   </div>
@@ -110,26 +110,12 @@
                 <article class="card card--background">
                   <div class="card__content">
                     <h2 class="card__type">Toolkit</h2>
-                    <h3 class="card__title"><a href="http://www.cheeseipsum.co.uk/">Cottage cheese brie lancashire. Boursin when the cheese comes out.</a></h3>
+                    <h3 class="card__title"><a href="http://veggieipsum.com">Veggies sunt bona vobis, proinde vos postulo</a></h3>
                     <div class="card__author">
                       <div class="card__author-inner">
-                        <div class="card__author-image"><img src="../../images-patternlab/buttercup-35-35.jpg"></div>
-                        <div class="card__author-name">Princess Buttercup</div>
-                        <div class="card__author-date">12/28/2015</div>    
-                      </div>
-                    </div>
-                  </div>
-                </article>              </div>
-              <div class="views-row">
-                <article class="card card--background">
-                  <div class="card__content">
-                    <h2 class="card__type">Toolkit</h2>
-                    <h3 class="card__title"><a href="http://chrisvalleskey.com/fillerama/">Help, help, I'm being repressed!</a></h3>
-                    <div class="card__author">
-                      <div class="card__author-inner">
-                        <div class="card__author-image"><img src="../../images-patternlab/gordon-35-35.jpg"></div>
-                        <div class="card__author-name">Gordon Clark</div>
-                        <div class="card__author-date">10/25/2015</div>    
+                        <div class="card__author-image"><img src="../../images-patternlab/watson-35-35.jpg"></div>
+                        <div class="card__author-name">Dr. John Watson, M.D.</div>
+                        <div class="card__author-date">2/10/2015</div>    
                       </div>
                     </div>
                   </div>
@@ -148,6 +134,20 @@
                     </div>
                   </div>
                 </article>              </div>
+              <div class="views-row">
+                <article class="card card--background">
+                  <div class="card__content">
+                    <h2 class="card__type">Toolkit</h2>
+                    <h3 class="card__title"><a href="http://slipsum.com/lite/">Yeah, I like animals better than people sometimes</a></h3>
+                    <div class="card__author">
+                      <div class="card__author-inner">
+                        <div class="card__author-image"><img src="../../images-patternlab/josh-35-35.jpg"></div>
+                        <div class="card__author-name">Joshua Lyman</div>
+                        <div class="card__author-date">7/22/2015</div>    
+                      </div>
+                    </div>
+                  </div>
+                </article>              </div>
           </div>
         </div>
       </div>
@@ -159,27 +159,27 @@
               <div class="views-row">
                 <article class="card card--icons">
                   <div class="card__image">
-                    <a href="http://web20ipsum.com"><img src="http://lorempixel.com/500/300/technics/3/" alt="Card 5:3" height="300" width="500">
+                    <a href="http://www.malevole.com/mv/misc/text/"><img src="http://lorempixel.com/500/300/sports/4/" alt="Card 5:3" height="300" width="500">
 </a>
                   </div>
                   <div class="card__content">
-                    <h3 class="card__title"><a href="http://web20ipsum.com">Webtwo ipsum dolor sit amet, eskobo chumby doostang bebo</a></h3>
-                    <div><p>Wufoo diigo grockit sifteo divvyshot, unigo zooomr revver. Edmodo appjet joyent skype bubbli jajah zoodles joukuu xobni hojoki edmodo appjet, mozy mzinga akismet yuntaa joost yuntaa geni tivo insala yoono chumby, grockit sococo loopt zanga etsy cloudera koofers empressr jiglu blippy. Omgpop lanyrd joukuu sococo zimbra airbnb movity jibjab, foodzie.</p></div>
+                    <h3 class="card__title"><a href="http://www.malevole.com/mv/misc/text/">Thunder, thunder, thundercats, Ho!</a></h3>
+                    <div><p>Beats all you've ever saw, been in trouble with the law since the day they was born. Straight'nin' the curve, flat'nin' the hills. Someday the mountain might get 'em, but the law never will. Makin' their way, the only way they know how, that's just a little bit more than the law will allow. Just good ol' boys, wouldn't change if they could, fightin' the system like a true modern day Robin Hood.</p></div>
                     <div class="card__counts">
                       <div class="view">
-                        <div class="has-icon--evidence" title="Evidence">2</div>
+                        <div class="has-icon--evidence" title="Evidence">6</div>
                       </div>
                       <div class="view">
-                        <div class="has-icon--comment" title="Comments">1</div>
+                        <div class="has-icon--comment" title="Comments">55</div>
                       </div>
                       <div class="view">
-                        <div class="has-icon--funding" title="Funding">6</div>
+                        <div class="has-icon--funding" title="Funding">245</div>
                       </div>
                       <div class="view">
-                        <div class="has-icon--favorite" title="Favorites">1</div>
+                        <div class="has-icon--favorite" title="Favorites">3</div>
                       </div>
                       <div class="view">
-                        <div class="has-icon--assistance" title="Assistance">4</div>
+                        <div class="has-icon--assistance" title="Assistance">899</div>
                       </div>
                     </div>
                   </div>
@@ -217,27 +217,27 @@
               <div class="views-row">
                 <article class="card card--icons">
                   <div class="card__image">
-                    <a href="http://veggieipsum.com"><img src="http://lorempixel.com/500/300/food/3/" alt="Card 5:3" height="300" width="500">
+                    <a href="http://web20ipsum.com"><img src="http://lorempixel.com/500/300/technics/3/" alt="Card 5:3" height="300" width="500">
 </a>
                   </div>
                   <div class="card__content">
-                    <h3 class="card__title"><a href="http://veggieipsum.com">Veggies sunt bona vobis, proinde vos postulo</a></h3>
-                    <div><p>Mung bean squash sorrel taro coriander collard greens gumbo bitterleaf tomato. Taro water chestnut celtuce turnip yarrow celery endive scallion black-eyed pea onion. Aubergine dulse turnip greens mustard salsify garlic soybean parsley bitterleaf desert raisin courgette.</p></div>
+                    <h3 class="card__title"><a href="http://web20ipsum.com">Webtwo ipsum dolor sit amet, eskobo chumby doostang bebo</a></h3>
+                    <div><p>Wufoo diigo grockit sifteo divvyshot, unigo zooomr revver. Edmodo appjet joyent skype bubbli jajah zoodles joukuu xobni hojoki edmodo appjet, mozy mzinga akismet yuntaa joost yuntaa geni tivo insala yoono chumby, grockit sococo loopt zanga etsy cloudera koofers empressr jiglu blippy. Omgpop lanyrd joukuu sococo zimbra airbnb movity jibjab, foodzie.</p></div>
                     <div class="card__counts">
                       <div class="view">
-                        <div class="has-icon--evidence" title="Evidence">56</div>
+                        <div class="has-icon--evidence" title="Evidence">2</div>
                       </div>
                       <div class="view">
-                        <div class="has-icon--comment" title="Comments">245</div>
+                        <div class="has-icon--comment" title="Comments">1</div>
                       </div>
                       <div class="view">
-                        <div class="has-icon--funding" title="Funding">452</div>
+                        <div class="has-icon--funding" title="Funding">6</div>
                       </div>
                       <div class="view">
-                        <div class="has-icon--favorite" title="Favorites">1055</div>
+                        <div class="has-icon--favorite" title="Favorites">1</div>
                       </div>
                       <div class="view">
-                        <div class="has-icon--assistance" title="Assistance">45</div>
+                        <div class="has-icon--assistance" title="Assistance">4</div>
                       </div>
                     </div>
                   </div>
@@ -258,11 +258,11 @@
                 <article class="card card--icons">
                   <div class="card__content">
                     <h2 class="card__type">Toolkit</h2>
-                    <h3 class="card__primary-title"><a href="http://web20ipsum.com">Webtwo ipsum dolor sit amet, eskobo chumby doostang bebo</a></h3>
+                    <h3 class="card__primary-title"><a href="http://www.malevole.com/mv/misc/text/">Thunder, thunder, thundercats, Ho!</a></h3>
                     <div class="card__author">
-                      <div class="card__author-image"><img src="../../images-patternlab/cj-35-35.jpg"></div>
-                      <div class="card__author-name">C.J. Cregg</div>
-                      <div class="card__author-date">8/31/2015</div>    
+                      <div class="card__author-image"><img src="../../images-patternlab/tyrion-35-35.jpg"></div>
+                      <div class="card__author-name">Tyrion Lannister</div>
+                      <div class="card__author-date">6/08/2015</div>    
                     </div>
                     <div class="card__list">
                       <span class="card__list-label">Sectors:</span> 
@@ -270,10 +270,10 @@
                     </div>
                     <div class="card__counts">
                       <div class="view">
-                        <div class="has-icon--comment" title="Comments">1</div>
+                        <div class="has-icon--comment" title="Comments">55</div>
                       </div>
                       <div class="view">
-                        <div class="has-icon--favorite" title="Favorites">1</div>
+                        <div class="has-icon--favorite" title="Favorites">3</div>
                       </div>
                     </div>
                   </div>
@@ -320,11 +320,11 @@
                 <article class="card card--icons">
                   <div class="card__content">
                     <h2 class="card__type">Toolkit</h2>
-                    <h3 class="card__primary-title"><a href="http://veggieipsum.com">Veggies sunt bona vobis, proinde vos postulo</a></h3>
+                    <h3 class="card__primary-title"><a href="http://web20ipsum.com">Webtwo ipsum dolor sit amet, eskobo chumby doostang bebo</a></h3>
                     <div class="card__author">
-                      <div class="card__author-image"><img src="../../images-patternlab/watson-35-35.jpg"></div>
-                      <div class="card__author-name">Dr. John Watson, M.D.</div>
-                      <div class="card__author-date">2/10/2015</div>    
+                      <div class="card__author-image"><img src="../../images-patternlab/cj-35-35.jpg"></div>
+                      <div class="card__author-name">C.J. Cregg</div>
+                      <div class="card__author-date">8/31/2015</div>    
                     </div>
                     <div class="card__list">
                       <span class="card__list-label">Sectors:</span> 
@@ -332,10 +332,10 @@
                     </div>
                     <div class="card__counts">
                       <div class="view">
-                        <div class="has-icon--comment" title="Comments">245</div>
+                        <div class="has-icon--comment" title="Comments">1</div>
                       </div>
                       <div class="view">
-                        <div class="has-icon--favorite" title="Favorites">1055</div>
+                        <div class="has-icon--favorite" title="Favorites">1</div>
                       </div>
                     </div>
                   </div>
@@ -360,15 +360,15 @@
           <div class="view--card-view-3col">
               <div class="views-row">
                 <article class="card card--icons">
-                  <div class="card__number">4,550</div>
+                  <div class="card__number">1,245,324</div>
                   <div class="card__image">
-                    <a href="http://web20ipsum.com"><img src="http://lorempixel.com/500/300/technics/3/" alt="Card 5:3" height="300" width="500">
+                    <a href="http://www.malevole.com/mv/misc/text/"><img src="http://lorempixel.com/500/300/sports/4/" alt="Card 5:3" height="300" width="500">
 </a>
                   </div>
                   <div class="card__content">
-                    <h3 class="card__primary-title"><a href="http://web20ipsum.com">Webtwo ipsum dolor sit amet, eskobo chumby doostang bebo</a></h3>
+                    <h3 class="card__primary-title"><a href="http://www.malevole.com/mv/misc/text/">Thunder, thunder, thundercats, Ho!</a></h3>
                     <div class="card__list">
-                      <div class="card__list-label">Due by:</div> 8/31/2015
+                      <div class="card__list-label">Due by:</div> 6/08/2015
                     </div> 
                     <div class="card__list">
                       <div class="card__list-label">Eligibility:</div> <span class="has-icon-member" title="Member">Member</span> <span class="has-icon-community" title="Organization">Organization</span>
@@ -383,10 +383,10 @@
                     </div>
                     <div class="card__counts">
                       <div class="view">
-                        <div class="has-icon--comment" title="Comments">1</div>
+                        <div class="has-icon--comment" title="Comments">55</div>
                       </div>
                       <div class="view">
-                        <div class="has-icon--favorite" title="Favorites">1</div>
+                        <div class="has-icon--favorite" title="Favorites">3</div>
                       </div>
                     </div>
                   </div>
@@ -440,15 +440,15 @@
               </div>
               <div class="views-row">
                 <article class="card card--icons">
-                  <div class="card__number">3,000,001</div>
+                  <div class="card__number">4,550</div>
                   <div class="card__image">
-                    <a href="http://veggieipsum.com"><img src="http://lorempixel.com/500/300/food/3/" alt="Card 5:3" height="300" width="500">
+                    <a href="http://web20ipsum.com"><img src="http://lorempixel.com/500/300/technics/3/" alt="Card 5:3" height="300" width="500">
 </a>
                   </div>
                   <div class="card__content">
-                    <h3 class="card__primary-title"><a href="http://veggieipsum.com">Veggies sunt bona vobis, proinde vos postulo</a></h3>
+                    <h3 class="card__primary-title"><a href="http://web20ipsum.com">Webtwo ipsum dolor sit amet, eskobo chumby doostang bebo</a></h3>
                     <div class="card__list">
-                      <div class="card__list-label">Due by:</div> 2/10/2015
+                      <div class="card__list-label">Due by:</div> 8/31/2015
                     </div> 
                     <div class="card__list">
                       <div class="card__list-label">Eligibility:</div> <span class="has-icon-member" title="Member">Member</span> <span class="has-icon-community" title="Organization">Organization</span>
@@ -463,10 +463,10 @@
                     </div>
                     <div class="card__counts">
                       <div class="view">
-                        <div class="has-icon--comment" title="Comments">245</div>
+                        <div class="has-icon--comment" title="Comments">1</div>
                       </div>
                       <div class="view">
-                        <div class="has-icon--favorite" title="Favorites">1055</div>
+                        <div class="has-icon--favorite" title="Favorites">1</div>
                       </div>
                     </div>
                   </div>
@@ -517,13 +517,13 @@
                  <div class="layout-slat layout-slat--small">
                    <div class="layout-slat__media">      
                      <div class="view__author-image">
-                       <img src="../../images-patternlab/cj-35-35.jpg">
+                       <img src="../../images-patternlab/tyrion-35-35.jpg">
                      </div>
                    </div>
                    <div class="layout-slat__content">
-                     <div class="view__title"><a href="#">Webtwo ipsum dolor sit amet, eskobo chumby doostang bebo</a></div>
+                     <div class="view__title"><a href="#">Thunder, thunder, thundercats, Ho!</a></div>
                      <div class="view__meta">
-                       Posted by <strong>C.J. Cregg</strong> | August 31 at 3:42pm
+                       Posted by <strong>Tyrion Lannister</strong> | June 8 at 11:37pm
                      </div>
                    </div>
                  </div>
@@ -547,13 +547,13 @@
                  <div class="layout-slat layout-slat--small">
                    <div class="layout-slat__media">      
                      <div class="view__author-image">
-                       <img src="../../images-patternlab/watson-35-35.jpg">
+                       <img src="../../images-patternlab/cj-35-35.jpg">
                      </div>
                    </div>
                    <div class="layout-slat__content">
-                     <div class="view__title"><a href="#">Veggies sunt bona vobis, proinde vos postulo</a></div>
+                     <div class="view__title"><a href="#">Webtwo ipsum dolor sit amet, eskobo chumby doostang bebo</a></div>
                      <div class="view__meta">
-                       Posted by <strong>Dr. John Watson, M.D.</strong> | February 10 at 1:20pm
+                       Posted by <strong>C.J. Cregg</strong> | August 31 at 3:42pm
                      </div>
                    </div>
                  </div>
