initial styling for report button

--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-user/02-organisms-01-content-types-user.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-user/02-organisms-01-content-types-user.html
@@ -261,12 +261,27 @@
           </div>
         </div>
       </div>
-
+      
         
       <div class="pane pane--recent-conversations-recent-conversations">
         <h2 class="pane__title">Recent Conversations</h2>  
         <div class="pane__content">
           <div class="view view--recent-conversations">
+              <div class="views-row">
+                <div class="layout-slat layout-slat--small">
+                  <div class="layout-slat__media">      
+                    <div class="view__author-image">
+                      <img src="../../images-patternlab/gordon-35-35.jpg">
+                    </div>
+                  </div>
+                  <div class="layout-slat__content">
+                    <div class="view__title"><a href="#">Help, help, I'm being repressed!</a></div>
+                    <div class="view__meta">
+                      Posted by <strong>Gordon Clark</strong> | October 25 at 3:51am
+                    </div>
+                  </div>
+                </div>
+              </div>
               <div class="views-row">
                 <div class="layout-slat layout-slat--small">
                   <div class="layout-slat__media">      
@@ -286,28 +301,13 @@
                 <div class="layout-slat layout-slat--small">
                   <div class="layout-slat__media">      
                     <div class="view__author-image">
-                      <img src="../../images-patternlab/watson-35-35.jpg">
+                      <img src="../../images-patternlab/inigo-35-35.jpg">
                     </div>
                   </div>
                   <div class="layout-slat__content">
-                    <div class="view__title"><a href="#">Veggies sunt bona vobis, proinde vos postulo</a></div>
+                    <div class="view__title"><a href="#">Danish danish candy canes bonbon cheesecake danish marzipan</a></div>
                     <div class="view__meta">
-                      Posted by <strong>Dr. John Watson, M.D.</strong> | February 10 at 1:20pm
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="views-row">
-                <div class="layout-slat layout-slat--small">
-                  <div class="layout-slat__media">      
-                    <div class="view__author-image">
-                      <img src="../../images-patternlab/cameron-35-35.jpg">
-                    </div>
-                  </div>
-                  <div class="layout-slat__content">
-                    <div class="view__title"><a href="#">Rebel Mission to Ord Mantell</a></div>
-                    <div class="view__meta">
-                      Posted by <strong>Cameron Howe</strong> | September 4 at 9:04am
+                      Posted by <strong>Inigo Montoya</strong> | November 19 at 11:55pm
                     </div>
                   </div>
                 </div>
