removed landing-alt layout and styled blue header by section class instead

--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-wanteds-landing/03-templates-wanteds-landing.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-wanteds-landing/03-templates-wanteds-landing.html
@@ -483,7 +483,7 @@
 
     <div class="l-panels-landing preface-empty title sidebar-empty main">
       <div class="l-preface layout-constrain"></div>
-      <div class="l-title region-landing-title region-landing-title--alt">
+      <div class="l-title region-landing-title">
         <div class="layout-constrain">
           <div class="pane pane--wanteds-introduction pane--landing-intro">
             <div class="pane__content">
