--- a/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-wanteds-landing/04-pages-wanteds-landing.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-wanteds-landing/04-pages-wanteds-landing.html
@@ -50,7 +50,7 @@
     <!-- End Pattern Lab -->
 
   </head>
-  <body class="not-front">
+  <body class="not-front section--wanteds">
     <div class="skiplinks">
       <a href="#main" class="skiplinks__link element-invisible element-focusable">Skip to main content</a>
     </div>
@@ -483,7 +483,7 @@
 
     <div class="l-panels-landing preface-empty title sidebar-empty main">
       <div class="l-preface layout-constrain"></div>
-      <div class="l-title region-landing-title region-landing-title--alt">
+      <div class="l-title region-landing-title">
         <div class="layout-constrain">
           <div class="pane pane--wanteds-introduction pane--landing-intro">
             <div class="pane__content">
