--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-wanteds-landing/03-templates-wanteds-landing.escaped.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-wanteds-landing/03-templates-wanteds-landing.escaped.html
@@ -427,7 +427,7 @@
 
     &lt;div class=&quot;l-panels-landing preface-empty title sidebar-empty main&quot;&gt;
       &lt;div class=&quot;l-preface layout-constrain&quot;&gt;&lt;/div&gt;
-      &lt;div class=&quot;l-title region-landing-title region-landing-title--alt&quot;&gt;
+      &lt;div class=&quot;l-title region-landing-title&quot;&gt;
         &lt;div class=&quot;layout-constrain&quot;&gt;
           &lt;div class=&quot;pane pane--wanteds-introduction pane--landing-intro&quot;&gt;
             &lt;div class=&quot;pane__content&quot;&gt;
